# fastapi-template

./: .env.example  .env.local  .env.prod  .gitignore  CRUD_API.md  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 6d72b9ba9c08_sample_migration_for_reference.py
src/: __init__.py  app.py
src/db/: __init__.py  context.py  listeners.py
src/entities/: __init__.py  sample_entity.py
src/entities/base/: __init__.py  base_entity_mixin.py
src/events/: __init__.py  register_event_pollers.py
src/events/pollers/: __init__.py  sample_event_poller.py
src/events/processor/: __init__.py  base_event_processor.py  sample_event_processor.py
src/exceptions/: global_handler.py
src/jobs/: __init__.py  base_job.py  configure_scheduler.py  sample_job.py
src/middlewares/: request_logger_middleware.py
src/routes/: __init__.py
src/routes/hello_world/: hello_world_routes.py
src/routes/sample/: __init__.py  sample_routes.py  schemas.py
src/services/: __init__.py  sample_service.py
src/utils/: bootstrap.py  env_utils.py  logging_utils.py  settings.py  toml_utils.py
