[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.17.2",
    "apscheduler>=3.11.1",
    "cowsay>=6.1",
    "fastapi[standard]>=0.121.3",
    "orjson>=3.11.4",
    "psycopg>=3.2.13",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.27",
    "toml>=0.10.2",
]
